fixed image sizes; should be better on mobile now

--- a/src/App.css
+++ b/src/App.css
@@ -113,10 +113,4 @@ h1 {
   padding: 10px 10px;
   text-align: center;
 }
-
-.TimelineIcon {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-}
 /* CSS @media Rules */
